word-wrap: break-word applied on .note-body to prevent text overflowing beyond the note area

--- a/style.css
+++ b/style.css
@@ -72,6 +72,7 @@ i {
 .note-body {
 	padding: 20px 15px;
 	font-size: 14px;
+	word-wrap: break-word;
 }
 
 .delete-note {
@@ -85,7 +86,6 @@ i {
 	top: 50%;
 	left: 50%;
 	transform: translate(-50%, -50%);
-
 }
 
 .note-panel {
@@ -116,18 +116,17 @@ i {
 .note-panel #text,
 .note-panel #category {
 	margin-bottom: 20px;
-    padding: 10px 20px;
-    width: 100%;
-    max-width: 90%;
-    max-height: 600px;
-    font-size: 16px;
-    border-radius: 5px;
-    box-shadow: 1px solid black;
+	padding: 10px 20px;
+	width: 100%;
+	max-width: 90%;
+	max-height: 600px;
+	font-size: 16px;
+	border-radius: 5px;
+	box-shadow: 1px solid black;
 }
 
 .note-panel .error {
-    margin-bottom: 20px;
-    color: red;
-    visibility:hidden;
+	margin-bottom: 20px;
+	color: red;
+	visibility: hidden;
 }
-
